# diesel-sqlite-struct-json-text

./: .gitignore  Cargo.toml  readme.md
example/: Cargo.toml  diesel.toml
example/migrations/2025-06-05-143046_create_posts/: up.sql
example/src/: main.rs  models.rs  schema.rs
src/: lib.rs
