[package]
name = "diesel-sqlite-struct-json-text"
version = "0.1.0"
edition = "2024"
description = "This proc macro attribute will allow you to store the target struct as json in TEXT field in diesel sqlite."
homepage = "https://github.com/Salman-Sali/diesel-struct-json-text"
readme = "readme.md"
license = "MIT"
keywords = ["diesel", "sqlite", "json", "text", "sql"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.92"
quote = "1.0.37"
syn = "2.0.89"

[workspace]
members = [ "example"]
