[package]
name = "example"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version="2.2.10", features= ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel-struct-json-text = { version = "0.1.0", path = ".." }
diesel_migrations = "2.2.0"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
libsqlite3-sys = { version ="0.30.1", features = ["bundled"] }